# BVHGeometry

./: CMakeLists.txt
examples/RayTracing/: CMakeLists.txt  main.cpp
include/Algorithms/: ClosestPointTriangle.h  RayTriangle.h
include/BVH/: BVH.h  BVHNode.h
include/Geometry/: AABB.h  Triangle.h
include/Math/: AABB.h  Ray.h  Vec.h
include/Mesh/: Mesh.h
src/: BVH.cpp
src/examples/: CMakeLists.txt
